[project]
name = "yt-download"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Doc",email = "alexandru.dochian@forktex.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp (>=2025.8.11,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
